# rust-project_euler

./: .gitignore  Cargo.toml  Makefile  README.md
lib/: Cargo.toml  combinations.rs  data_reader.rs  digits.rs  integer_extensions.rs  pandigital.rs  primes.rs  shared.rs  sieve.rs  triangle.rs
lib/src/: combinations.rs  continued_fraction.rs  data_reader.rs  digits.rs  integer_extensions.rs  pandigital.rs  permutations.rs  primes.rs  shared.rs  sieve.rs  triangle.rs
new-problem/: Cargo.toml
new-problem/src/: main.rs  problem.hbs
shared/: Cargo.toml
shared/benches/: digits.rs
shared/src/: a_star.rs  continued_fraction.rs  data_reader.rs  digit_count.rs  digits.rs  integer_extensions.rs  lib.rs  pandigital.rs  permutations.rs  primes.rs  pythagorean_triplets.rs  totient.rs  triangle.rs
shared/src/a_star/: algorithm.rs  matrix.rs
src/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  18.rs  19.rs  20.rs  21.rs  22.rs  23.rs  24.rs  25.rs  26.rs  27.rs  28.rs  29.rs  30.rs  31-2.rs  31.rs  32.rs  33.rs  34.rs  35.rs  36.rs  37.rs  38.rs  39-2.rs  (+19 more)
