[package]
name = "project_euler"
version = "0.0.1"
authors = ["Renato Zannon <renato@rrsz.com.br>"]

[dependencies.shared]
path = "lib"

[dependencies.num]
git = "https://github.com/rust-lang/num"

# SOLUTIONS BEGIN

[[bin]]
name = "01"
path = "src/01.rs"

[[bin]]
name = "02"
path = "src/02.rs"

[[bin]]
name = "03"
path = "src/03.rs"

[[bin]]
name = "04"
path = "src/04.rs"

[[bin]]
name = "05"
path = "src/05.rs"

[[bin]]
name = "06"
path = "src/06.rs"

[[bin]]
name = "07"
path = "src/07.rs"

[[bin]]
name = "08"
path = "src/08.rs"

[[bin]]
name = "09"
path = "src/09.rs"

[[bin]]
name = "10"
path = "src/10.rs"

[[bin]]
name = "11"
path = "src/11.rs"

[[bin]]
name = "12"
path = "src/12.rs"

[[bin]]
name = "13"
path = "src/13.rs"

[[bin]]
name = "14"
path = "src/14.rs"

[[bin]]
name = "15"
path = "src/15.rs"

[[bin]]
name = "16"
path = "src/16.rs"

[[bin]]
name = "17"
path = "src/17.rs"

[[bin]]
name = "18"
path = "src/18.rs"

[[bin]]
name = "19"
path = "src/19.rs"

[[bin]]
name = "20"
path = "src/20.rs"

[[bin]]
name = "21"
path = "src/21.rs"

[[bin]]
name = "22"
path = "src/22.rs"

[[bin]]
name = "23"
path = "src/23.rs"

[[bin]]
name = "24"
path = "src/24.rs"

[[bin]]
name = "25"
path = "src/25.rs"

[[bin]]
name = "26"
path = "src/26.rs"

[[bin]]
name = "27"
path = "src/27.rs"

[[bin]]
name = "28"
path = "src/28.rs"

[[bin]]
name = "29"
path = "src/29.rs"

[[bin]]
name = "30"
path = "src/30.rs"

[[bin]]
name = "31-2"
path = "src/31-2.rs"

[[bin]]
name = "31"
path = "src/31.rs"

[[bin]]
name = "32"
path = "src/32.rs"

[[bin]]
name = "33"
path = "src/33.rs"

[[bin]]
name = "34"
path = "src/34.rs"

[[bin]]
name = "35"
path = "src/35.rs"

[[bin]]
name = "36"
path = "src/36.rs"

[[bin]]
name = "37"
path = "src/37.rs"

[[bin]]
name = "38"
path = "src/38.rs"

[[bin]]
name = "39-2"
path = "src/39-2.rs"

[[bin]]
name = "39"
path = "src/39.rs"

[[bin]]
name = "40"
path = "src/40.rs"

[[bin]]
name = "41"
path = "src/41.rs"

[[bin]]
name = "42"
path = "src/42.rs"

[[bin]]
name = "43"
path = "src/43.rs"

[[bin]]
name = "44"
path = "src/44.rs"

[[bin]]
name = "45"
path = "src/45.rs"

[[bin]]
name = "46"
path = "src/46.rs"

[[bin]]
name = "47-2"
path = "src/47-2.rs"

[[bin]]
name = "47"
path = "src/47.rs"

[[bin]]
name = "48"
path = "src/48.rs"

[[bin]]
name = "49"
path = "src/49.rs"

[[bin]]
name = "50"
path = "src/50.rs"

[[bin]]
name = "51"
path = "src/51.rs"

[[bin]]
name = "52"
path = "src/52.rs"

[[bin]]
name = "53"
path = "src/53.rs"

[[bin]]
name = "67"
path = "src/67.rs"
