[package]
name = "project_euler"
version = "0.0.1"
authors = ["Renato Zannon <renato@rrsz.com.br>"]

[dependencies]
collect = "*"

[dependencies.shared]
path = "lib"

[profile.release]
lto = true

[dependencies.num]
git = "https://github.com/rust-lang/num"

[dependencies.ascii]
git = "https://github.com/simonsapin/rust-ascii"
